--- a/css/sidebar-style.css
+++ b/css/sidebar-style.css
@@ -49,7 +49,7 @@ html { height: 100%;}
 
 #page-content-wrapper {
     width: 100%;
-    padding-top: 2%;
+    padding-top: 48px;
 }
 
 #wrapper.toggled #page-content-wrapper {
