--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,7 @@ table#content.logiTable td {
     position:relative;
     float:left;
     margin-top:10px;
+    margin-left:-40px;
 }
 .quick-actions,
 .quick-actions-horizontal {
