--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 h2 {
-    letter-spacing: 2px;
+    letter-spacing: 2px !important;
     text-transform: uppercase;
     font-family: "proxima-nova",sans-serif;
 }
