all the proximas

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,14 @@ h1 {
     font-family: "proxima-nova",sans-serif;
 }
 
+h3 {
+    font-family: "proxima-nova",sans-serif;
+}
+
+h4 {
+    font-family: "proxima-nova",sans-serif;
+}
+
 .page-title{
 	text-transform: uppercase;
 }
