--- a/css/style.css
+++ b/css/style.css
@@ -212,3 +212,7 @@ table#content.logiTable td {
     background-image: linear-gradient(top, #EEEEEE 0%, #F4F4F4 100%);
     box-shadow: 0 1px 4px 0 rgba(0,0,0,0.2) inset, 0 1px 0 rgba(255,255,255,0.4);
 }
+
+.wrapper-sidebar {
+    padding-left: 300px;
+}
